# Shinkansen

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  publish.yml  test.yml
src/anime_pahe_dl/: __init__.py  cli.py  client.py  config.py  downloader.py  utils.py  worker_pool.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_downloader.py
