[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-pahe-dl"
version = "1.0.0"
description = "Fast, reliable anime downloader for AnimePahe - built with lessons from autopahe"
authors = [{ name = "Pasindu Janith" }]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "playwright>=1.45.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
]

[project.scripts]
anime-dl = "anime_pahe_dl.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
