[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-pahe-dl"
version = "1.0.0"
description = "Fast, reliable anime downloader for AnimePahe - built with lessons from autopahe"
authors = [{ name = "Pasindu Janith" }]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "playwright>=1.45.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
]

[project.scripts]
anime-dl = "anime_pahe_dl.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring real network or Playwright",
]

[tool.setuptools.packages.find]
where = ["src"]
